Added memory debug option. Increased typing speed

--- a/app/src/main/res/layout/activity_main_window.xml
+++ b/app/src/main/res/layout/activity_main_window.xml
@@ -46,4 +46,14 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:onClick="getAvailProcesses"/>
+
+    <Button
+        android:text="View Memory"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/getAvailProcess"
+        android:layout_alignParentStart="true"
+        android:id="@+id/viewMem"
+        android:layout_alignParentEnd="true"
+        android:onClick="viewMemory"/>
 </RelativeLayout>
